--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 							<div class="project_view_0 view_0 flex">
 								<div class="about_header">Именные коврики</div>
 								<div class="about_text">HTML / CSS / JavaScript</div>
-								<a href="#" target="_blank">
+								<a href="https://web-site-namecarpet.netlify.app/" target="_blank">
 									<div class="btn_visit flex">Посмотреть сайт</div>
 								</a>
 							</div>
