--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Веб-разработчик</title>
+	<title>Веб-разработчик. Портфолио</title>
 	<meta name="description" content="Портфолио веб-разработчика">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="img/favicon.png" type="image/png">
@@ -212,7 +212,7 @@
 							<div class="project_view_0 view_0 flex">
 								<div class="about_header">Именные коврики</div>
 								<div class="about_text">HTML / CSS / JavaScript</div>
-								<a href="https://web-site-namecarpet.netlify.app/" target="_blank">
+								<a href="https://namecarpet-findsaid.netlify.app/" target="_blank">
 									<div class="btn_visit flex">Посмотреть сайт</div>
 								</a>
 							</div>
@@ -224,7 +224,7 @@
 									Проект конкурса. Разработка сайта на тему "Моё хобби"<br>
 									HTML / CSS / jQuery
 								</div>
-								<a href="https://web-site-my-hobby.netlify.app/" target="_blank">
+								<a href="https://my-hobby-findsaid.netlify.app/" target="_blank">
 									<div class="btn_visit flex">Посмотреть сайт</div>
 								</a>
 							</div>
@@ -233,7 +233,7 @@
 							<div class="project_view_1 view_0 flex">
 								<div class="about_header">Инструменты</div>
 								<div class="about_text">HTML / CSS / jQuery</div>
-								<a href="https://web-site-tools.netlify.app/" target="_blank">
+								<a href="https://web-tools-findsaid.netlify.app/" target="_blank">
 									<div class="btn_visit flex">Посмотреть сайт</div>
 								</a>
 							</div>
@@ -400,7 +400,7 @@
 					</div>
 				</div>
 				<div class="about_row footnote">
-					<span>© findsaid 2022</span>
+					<a href="https://findsaid.github.io/">© findsaid</a>
 				</div>
 			</section>
 		</main>
